@@ -5,7 +5,7 @@ import net.ltgt.gradle.errorprone.*
 import org.gradle.api.tasks.testing.logging.*
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 
-val argumentosJvmSemAvisoUnsafe = listOf("--sun-misc-unsafe-memory-access=allow")
+val argumentosJvmSemAvisoUnsafe = listOf("-XDaddTypeAnnotationsToSymbol=true")
 
 plugins {
     java
@@ -21,9 +21,7 @@ plugins {
 
 tasks.withType<JavaCompile>().configureEach {
     options.isFork = true
-    options.forkOptions.jvmArgs = (options.forkOptions.jvmArgs ?: mutableListOf()).apply {
-        addAll(argumentosJvmSemAvisoUnsafe)
-    }
+    options.compilerArgs.addAll(listOf("-XDaddTypeAnnotationsToSymbol=true"))
     options.compilerArgs.addAll(listOf("-Xlint:unchecked", "-Xlint:deprecation"))
     options.errorprone {
         disableAllChecks = true
@@ -215,7 +213,6 @@ tasks.withType<Test> {
         "-Dmockito.ext.disable=true",
         "-Xshare:off",
         "-XX:+EnableDynamicAgentLoading",
-        *argumentosJvmSemAvisoUnsafe.toTypedArray(),
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
         "--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED"
